# Board43

./: .gitmodules  README.md
.github/workflows/: build-document.yml  build-firmware.yml
docs/: Cargo.toml  README.md
docs/reference-manual/: main.typ  metadata.yml
docs/src/: main.rs  metadata.rs  nup.rs
firmware/: LICENSE  README.md  picoruby.patch  setup.sh
pcb/: .gitignore  Board43.kicad_pcb  Board43.kicad_pro  Board43.kicad_sch  LEDArray.kicad_sch  LICENSE  fp-lib-table  sym-lib-table
pcb/lib/: Board43.kicad_sym  Board43_KiCad.kicad_sym
pcb/lib/Board43.3dshapes/: AOTA-B201610S3R3-101-T.step  LM73100RPWR.step  MLT-8530.step  RP2350A.step  SKRPACE010.step  TYPE-C16PIN.step  WS2812C-2020-V1.step
pcb/lib/Board43.pretty/: AOTA-B201610S3R3-101-T.kicad_mod  BM03B-SRSS-TB.kicad_mod  MLT-8530.kicad_mod  RP2350A.kicad_mod  SKRPACE010.kicad_mod  TYPE-C16PIN.kicad_mod  WS2812C-2020-V1.kicad_mod
pcb/scripts/: arrange_grid.py
playground/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
playground/lib/board43-image-transformer/: .gitignore  Cargo.toml  README.md  index.html
playground/lib/board43-image-transformer/src/: lib.rs  main.rs
playground/public/: llms-full.txt  llms.txt
playground/src/: App.css  App.tsx  main.tsx
workshop/: README.md  README_en.md
workshop/examples/: README.md  README_en.md  button.rb  buzzer.rb  drum.rb  imu.rb  led_matrix.rb  logo.rb  scroll_two_patterns_right.rb  scroll_two_patterns_with_switch.rb  snake_game.rb  status_led.rb  theremin.rb  water.rb
(+100 files in other folders)
